<resources>
    <string name="facebook_app_id">1563711173937111</string>
    <string name="youtube_api_key">AIzaSyBa6AR6nKFc-wc98kZvy6NcpgSkQzOS6fQ</string>
    <string name="server_api_key">AIzaSyDrgzGuNzCWEAn2Nxzh4TnkA5rIwc3NrtE</string>
    <string name="sender_id">585821625750</string>
    <string name="pusher_app_id">444145</string>
    <string name="pusher_key">6d9b1e52e10b8509dfcc</string>
    <string name="pusher_secret">7e6b88c6371266bc5a01</string>
    <string name="pusher_cluster">ap1</string>
    <string name="app_name">ตลาดคลองผดุง</string>
    <string name="event_title">ตลาดคลองผดุงกรุงเกษม</string>
    <string name="map_title">แผนที่ ตลาดคลองผดุงกรุงเกษม</string>
    <string name="about_title">เกี่ยวกับ ตลาดคลองผดุงกรุงเกษม</string>
    <string name="activity_title">กิจกรรมภายในงาน</string>
    <string name="main_title">ตลาดคลองผดุงกรุงเกษม</string>
    <string name="open_drawer">Open Menu</string>
    <string name="close_drawer">Close Menu</string>
    <string name="create_account_topic">Create Account</string>
    <string name="create_account_name">Name</string>
    <string name="create_account_lastname">LastName</string>
    <string name="create_account_e_mail">E-Mail</string>
    <string name="create_account_password">Password</string>
    <string name="register_confirm_password">Confirm Password</string>
    <string name="signin_forget_password_btn">ลืมรหัส</string>
    <string name="signin_no_account_tv">ยังไม่มีบัญชีใช่ไหม ?</string>
    <string name="signin_newaccount_btn">สร้างบัญชีใหม่</string>
    <string name="product_detail_property_text">คุณสมบัติ</string>
    <string name="cart_continue_shopping_text">ช็อปปิ้งต่อ</string>
    <string name="cart_all_product_list_price">ราคาสินค้าทั้งหมด</string>
    <string name="cart_free_text">ฟรี</string>
    <string name="exchange_text_button">แลกของ</string>
    <string name="cart_transport_price_text">ค่าจัดส่งสินค้า</string>
    <string name="delete_product_in_cart_text">X นำออก</string>
    <string name="cart_member_remain_point_text">คะแนนที่ท่านมี</string>
    <string name="cart_not_enought_point_show">คะแนนที่ท่านมีไม่พอค่ะ\nกรุณานำสินค้าบางรายการออกค่ะ</string>
    <string name="checkout_firstname_placeholder">First Name *</string>
    <string name="checkout_lastname_placeholder">Last Name *</string>
    <string name="checkout_address_placeholder">Address *</string>
    <string name="checkout_soi_placeholder">Soi *</string>
    <string name="checkout_street_placeholder">Street *</string>
    <string name="checkout_province_placeholder">Province *</string>
    <string name="checkout_ordernote_placeholder">Order Note...</string>
    <string name="checkout_tumbon_placeholder">Tumbon *</string>
    <string name="checkout_district_placeholder">District *</string>
    <string name="checkout_postcode_placeholder">PostCode *</string>
    <string name="policy_button_text">เงื่อนไขและข้อกำหนด</string>
    <string name="check_point_history_text">Check Point History</string>
    <string name="check_point_no_order_history_text">ท่านยังไม่เคยสั่งสินค้าค่ะ\nท่านสามารถเลือกสินค้าได้ที่หน้าสินค้าค่ะ.</string>
    <string name="check_redeem_product_history_complete_review_text">ท่านได้ทำการรีวิวสินค้าเรียบร้อยแล้วค่ะ\nขอบคุณมากค่ะ.</string>
</resources>
