<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="2dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:orientation="vertical"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp">


                    <Button
                        android:id="@+id/cartDeleteBtn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom|end"
                        android:background="@android:color/transparent"
                        android:textColor="@color/blackGray"
                        android:textSize="15sp"
                        android:text="X ยกเลิก"/>

                </LinearLayout>

            </LinearLayout>


            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/create_account_edittext_layout_padding">

                <EditText
                    android:id="@+id/checkoutFirstNameET"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:background="@drawable/rounded_button_edittext"
                    android:textSize="@dimen/edittext_size"
                    android:padding="@dimen/edittext_padding"
                    android:hint="@string/checkout_firstname_placeholder"
                    />

            </LinearLayout>


            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/create_account_edittext_layout_padding">

                <EditText
                    android:id="@+id/checkoutLastNameET"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:background="@drawable/rounded_button_edittext"
                    android:textSize="@dimen/edittext_size"
                    android:padding="@dimen/edittext_padding"
                    android:hint="@string/checkout_lastname_placeholder"
                    />

            </LinearLayout>


            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/create_account_edittext_layout_padding">

                <EditText
                    android:id="@+id/checkoutAddressET"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:background="@drawable/rounded_button_edittext"
                    android:textSize="@dimen/edittext_size"
                    android:padding="@dimen/edittext_padding"
                    android:hint="@string/checkout_address_placeholder"
                    />

            </LinearLayout>


            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/create_account_edittext_layout_padding">

                <EditText
                    android:id="@+id/checkoutSoiET"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:inputType="text"
                    android:background="@drawable/rounded_button_edittext"
                    android:textSize="@dimen/edittext_size"
                    android:padding="@dimen/edittext_padding"
                    android:hint="@string/checkout_soi_placeholder"
                    />

                <TextView
                    android:layout_width="10dp"
                    android:layout_height="wrap_content"
                    android:text=""/>

                <EditText
                    android:id="@+id/checkoutStreetET"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:inputType="text"
                    android:background="@drawable/rounded_button_edittext"
                    android:textSize="@dimen/edittext_size"
                    android:padding="@dimen/edittext_padding"
                    android:hint="@string/checkout_street_placeholder"
                    />

            </LinearLayout>


            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/create_account_edittext_layout_padding">

                <EditText
                    android:id="@+id/checkoutTumbonET"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:background="@drawable/rounded_button_edittext"
                    android:textSize="@dimen/edittext_size"
                    android:padding="@dimen/edittext_padding"
                    android:hint="@string/checkout_tumbon_placeholder"
                    />

            </LinearLayout>


            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/create_account_edittext_layout_padding">

                <EditText
                    android:id="@+id/checkoutDistrictET"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:background="@drawable/rounded_button_edittext"
                    android:textSize="@dimen/edittext_size"
                    android:padding="@dimen/edittext_padding"
                    android:hint="@string/checkout_district_placeholder"
                    />

            </LinearLayout>


            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/create_account_edittext_layout_padding">

                <EditText
                    android:id="@+id/checkoutProvinceET"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:background="@drawable/rounded_button_edittext"
                    android:textSize="@dimen/edittext_size"
                    android:padding="@dimen/edittext_padding"
                    android:hint="@string/checkout_province_placeholder"
                    />

            </LinearLayout>


            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/create_account_edittext_layout_padding">

                <EditText
                    android:id="@+id/checkoutOrderNoteET"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textMultiLine"
                    android:lines="5"
                    android:gravity="start"
                    android:background="@drawable/rounded_button_edittext"
                    android:textSize="@dimen/edittext_size"
                    android:padding="@dimen/edittext_padding"
                    android:hint="@string/checkout_ordernote_placeholder"
                    />

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="30dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/cart_transport_price_text"
                    android:textColor="@color/blackGray"
                    android:gravity="center"
                    android:textSize="15sp"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/cart_free_text"
                    android:gravity="center"
                    android:textColor="@color/blackGray"
                    android:textSize="15sp"/>

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="10dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/cart_all_product_list_price"
                    android:textColor="@color/blackGray"
                    android:gravity="center"
                    android:textSize="15sp"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="600 Points"
                    android:gravity="center"
                    android:textColor="@color/blackGray"
                    android:textSize="15sp"
                    android:textStyle="bold"/>

            </LinearLayout>

            <Button
                android:id="@+id/cartPolicyBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:layout_gravity="center"
                android:text="@string/policy_button_text"
                android:textColor="@color/blackGray"
                android:textStyle="italic"
                android:padding="20dp"/>


        </LinearLayout>

    </ScrollView>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/background_bottom_layout_height"
        android:background="#54b948"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="33dp"
            android:src="@drawable/cashmachinelogo"
            android:layout_gravity="end|center"
            android:gravity="end|center"
            android:layout_weight="0.33"
            android:padding="0dp"/>

        <Button
            android:id="@+id/cashOutBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:text="ยืนยันการจัดส่ง"
            android:textColor="#FFF"
            android:layout_gravity="center|start"
            android:gravity="start|center"
            android:textSize="20sp"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>

    </LinearLayout>

</LinearLayout>