<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/menubackground">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/samplinklogo"
                android:layout_gravity="center"
                android:paddingTop="20dp"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/create_account_topic"
                android:gravity="center"
                android:padding="@dimen/topic_padding"
                android:textSize="20sp"/>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/create_account_edittext_layout_padding">

                <!--<Button-->
                <!--android:id="@+id/registerFBBtn"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:background="@drawable/signupfbbtn"/>-->

                <com.facebook.login.widget.LoginButton
                    xmlns:fb="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/fbLogin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/text_25_size"
                    fb:com_facebook_login_text=""
                    fb:com_facebook_logout_text=""/>

            </LinearLayout>



            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Or"
                android:gravity="center"
                android:padding="10dp"
                android:textSize="20sp"/>


            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/create_account_edittext_layout_padding">

                <EditText
                    android:id="@+id/registerNameET"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:inputType="text"
                    android:background="@drawable/rounded_button_edittext"
                    android:textSize="@dimen/edittext_size"
                    android:padding="@dimen/edittext_padding"
                    android:hint="@string/create_account_name"
                    />

                <TextView
                    android:layout_width="10dp"
                    android:layout_height="wrap_content"
                    android:text=""/>

                <EditText
                    android:id="@+id/registerLastNameET"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:inputType="text"
                    android:background="@drawable/rounded_button_edittext"
                    android:textSize="@dimen/edittext_size"
                    android:padding="@dimen/edittext_padding"
                    android:hint="@string/create_account_lastname"
                    />

            </LinearLayout>


            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/create_account_edittext_layout_padding">

                <EditText
                    android:id="@+id/registerEmailET"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:background="@drawable/rounded_button_edittext"
                    android:textSize="@dimen/edittext_size"
                    android:padding="@dimen/edittext_padding"
                    android:hint="@string/create_account_e_mail"
                    />

            </LinearLayout>


            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/create_account_edittext_layout_padding">

                <EditText
                    android:id="@+id/registerPasswordET"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:background="@drawable/rounded_button_edittext"
                    android:textSize="@dimen/edittext_size"
                    android:padding="@dimen/edittext_padding"
                    android:hint="@string/create_account_password"
                    />

            </LinearLayout>


            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/create_account_edittext_layout_padding">

                <EditText
                    android:id="@+id/registerConfirmPasswordET"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:background="@drawable/rounded_button_edittext"
                    android:textSize="@dimen/edittext_size"
                    android:padding="@dimen/edittext_padding"
                    android:hint="@string/register_confirm_password"
                    />

            </LinearLayout>


            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/create_account_edittext_layout_padding">

                <Button
                    android:id="@+id/registerBtn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/createaccountbtn"/>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>